--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -22,17 +22,19 @@ idna==3.7
 incremental==22.10.0
 jmespath==1.0.1
 msgpack==1.0.8
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 PyJWT==2.8.0
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
 redis==5.0.4
 s3transfer==0.10.1
 service-identity==24.1.0
+setuptools==70.0.0
 six==1.16.0
 sqlparse==0.5.0
 Twisted==24.3.0
